Fixed table overflow scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -227,7 +227,7 @@ table img {
 }
 
 .table {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 footer {
